[gd_scene load_steps=2 format=3 uid="uid://guild_slot"]

[ext_resource type="Script" path="res://src/ui/slot/guild_slot.gd" id="1_script"]

[node name="GuildSlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.18, 0.22, 0.28, 0.98)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.88, 0.6, 1)
theme_override_font_sizes/font_size = 28
text = "Í∏∏Îìú Ïä¨Î°Ø"
horizontal_alignment = 1

[node name="GameArea" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="Margin" type="MarginContainer" parent="VBox/GameArea"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBox" type="HBoxContainer" parent="VBox/GameArea/Margin"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Reel1" type="Label" parent="VBox/GameArea/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 64
text = "‚öî"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reel2" type="Label" parent="VBox/GameArea/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 64
text = "üõ°"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reel3" type="Label" parent="VBox/GameArea/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 64
text = "ü™ô"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="VBox/GameArea/Margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.25, 1)
theme_override_font_sizes/font_size = 20
text = "Gold: 0"
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="VBox/GameArea/Margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="SpinButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Ïä§ÌïÄ (5G)"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "ÎèåÏïÑÍ∞ÄÍ∏∞"

[node name="HelpButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Í≤åÏûÑ Î∞©Î≤ï"

[node name="HelpPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="HelpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="HelpPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HelpLabel" type="Label" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.88, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "5Í≥®ÎìúÎ•º ÏÜåÎπÑÌï¥ Ïä§ÌïÄ..."
autowrap_mode = 3

[node name="CloseBtn" type="Button" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Îã´Í∏∞"
